# ml_api

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: github-action-ml-filter.yml
ml_api/: dependency.py  router.py  run_api.py  schema.py  service.py
test/: conftest.py  test_dependency.py  test_router.py  test_schema.py  test_service.py
