[tool.poetry]
name = "ml-api"
version = "0.2.0"
description = "Simple template for inference ml models on fasapi"
authors = ["adios <eremeevvv72@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standart"], version = "^0.23.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.1"
httpx = "^0.25.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
