[tool.poetry]
name = "ml-api"
version = "0.2.0"
description = "Simple template for inference ml models on fasapi"
authors = ["adios <eremeevvv72@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standart"], version = "^0.23.2"}


[tool.poetry.group.test.dependencies]
httpx = "^0.25.0"
pytest = "^7.4.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
